# local-drive

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: auth.rs  config.rs  database.rs  file_storage.rs  main.rs  models.rs
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/ui/: button.tsx  chunked-file-upload.tsx  spinner.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: auth.ts
