[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.0"
argon2 = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
multipart = "0.18"
tempfile = "3.0"
fs_extra = "1.3"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
tokio-cron-scheduler = "0.10"
sysinfo = "0.36"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "minwindef", "basetsd"] }
